Slight correction to text offset for better alignment with dropdown menu

--- a/gvi/interfaces/css/style.css
+++ b/gvi/interfaces/css/style.css
@@ -85,7 +85,7 @@ h1>#hubname{
 }
 
 .select-title-offset{
-	margin-left:-30px;
+	margin-left:-7px;
 }
 
 .container-non-responsive {
